[package]
name = "arch_program"
version = "0.1.0"
edition = "2021"
description = "A Rust library for building programs that run inside the Arch Virtual Machine. Provides core functionality for creating instructions, managing accounts, handling program errors, and interacting with the Arch runtime environment. Includes utilities for logging, transaction handling, and Bitcoin UTXO management."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.4.0", features = ["derive"] }
hex = { version = "0.4.3", default-features = false }
memoffset = { version = "0.9.0" }
rustversion = { version = "1.0.14" }
thiserror = { version = "1.0" }
bitcoin = { version = "0.32.3", features = ["serde"] }
sha256 = { version = "1.1.1" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = { version = "1.5.0" }
rand = { version = "0.8" }
